--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,8 @@
     animation: infiniteScrollBg 50s linear infinite;
 }
 .navbar{
+    display:flex;
+    gap: 20vw;
     width: 1200px;
     height: 75px;
     margin: auto;
